Update CTA button text and section title typography
1. CTA Button Text:
   - Changed 'Want a more precise estimation?' → 'Refine your estimation'
   - Applied to all 3 calculator sections (Consolidation, MTTR, Vulnerability)

2. Section Title Typography:
   - Font size: 24px → 34px (70% of main hero title's 48px)
   - Font weight: 600 → 700 (match hero title weight)
   - Maintains Playfair Display serif font
   - Examples: 'Tool Consolidation Value', 'MTTR Reduction Value', 'Vulnerability Prioritization ROI'

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <span class="title-subtext">based on proven consolidation results with Sweet.</span>
             </div>
             <div class="estimated-value" id="consolidationEstimate">$0</div>
-            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Want a more precise estimation?</button>
+            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Refine your estimation</button>
             <div style="text-align: right; margin-top: 12px;">
               <button class="next-section-btn" onclick="toggleSection('mttr')">Next: MTTR Calculator →</button>
             </div>
@@ -232,7 +232,7 @@
             </div>
             <div id="mttrCalculationSteps" style="margin: 12px 0;"></div>
             <div class="estimated-value" id="mttrEstimateValue">$0</div>
-            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Want a more precise estimation?</button>
+            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Refine your estimation</button>
             <div style="text-align: right; margin-top: 12px;">
               <button class="next-section-btn" onclick="toggleSection('vuln')">Next: Vulnerability ROI →</button>
             </div>
@@ -291,7 +291,7 @@
               that would take SecOps teams to remediate.
             </div>
             
-            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Want a more precise estimation?</button>
+            <button class="cta-button precision-cta" onclick="openPreciseEstimate()" style="margin-top: 20px;">Refine your estimation</button>
           </div>
         </div>
       </div>
