Add PDF export functionality with Download Report button
FEATURES:
- Download Report button appears after at least one calculation
- Clean, professional PDF layout with Sweet Security branding
- Opens browser print dialog (user can save as PDF)

BUTTON DESIGN:
- White background with gray border
- 📄 PDF icon + 'Download Report' text
- Hover effect: neon green border
- Located below CTA button in sidebar
- Hidden by default, shows when total > $0

PDF CONTENT:
- Header: 'Sweet Security ROI Report'
- Total Annual Value (large, centered)
- Breakdown of all calculated savings:
  * Tool Consolidation
  * MTTR Reduction
  * Vulnerability Prioritization
- Organization size (workloads)
- Generation date
- Professional styling with Sweet's neon green accent

IMPLEMENTATION:
- Creates new window with clean HTML/CSS
- Triggers browser print dialog
- User can save as PDF or print
- No external libraries needed
- Works in all modern browsers

--- a/index.html
+++ b/index.html
@@ -342,6 +342,11 @@
       
       <!-- CTA Button -->
       <button class="cta-button" onclick="redirectToDemo()">Get Started with Sweet Security</button>
+      
+      <!-- Download Report Button (hidden by default) -->
+      <button class="download-report-btn" id="downloadReportBtn" onclick="downloadPDF()" style="display: none;">
+        <span>📄</span> Download Report
+      </button>
     </div>
   </div>
 
